# gamma-game

./: CMakeLists.txt  Doxyfile.in
src/: batch_mode.c  batch_mode.h  board.c  board.h  gamma.c  gamma.h  gamma_interactive.c  gamma_interactive.h  gamma_main.c  gamma_struct.c  gamma_struct.h  gamma_test.c  gamma_utils.c  gamma_utils.h  node.c  node.h  player.h  state.h  vector.c  vector.h
src/gamma_backend/: board.c  board.h  gamma.c  gamma.h  gamma_struct.c  gamma_struct.h  gamma_test.c
